2017-11-24  Markus Gans  <guru.mail@muenster.de>
	* Splitting quirks in serperate methods

2017-11-24  Markus Gans  <guru.mail@muenster.de>
	* Detects Linux console font with 512 characters and 
	  reduces the number of colors to 8
	* Color palette defined for 8 colors

2017-11-23  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code from FOptiAttr::changeAttribute

2017-11-22  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code in FVTerm::print

2017-11-19  Markus Gans  <guru.mail@muenster.de>
	* Splitting the FString example into sub-functions to make 
	  the code more comprehensible

2017-11-18  Markus Gans  <guru.mail@muenster.de>
	* Improved command line paramenter handling
	* New command line paramenter --no-terminal-detection
	* New command line paramenter --no-color-change
	* Splitting init_termcaps() into multiple submethods

2017-11-11  Markus Gans  <guru.mail@muenster.de>
	* Improved code coverage tests

2017-11-08  Markus Gans  <guru.mail@muenster.de>
	* Simulate invisible characters on terminals that do not 
	  support this attribute

2017-11-04  Markus Gans  <guru.mail@muenster.de>
	* Version 0.4.0
	* Change license from GPL v3 to LGPL v3

2017-11-03  Markus Gans  <guru.mail@muenster.de>
	* Small NewFont improvements
	* Fixed bug: The window example called a callback method after 
	  the child data was deleted

2017-11-02  Markus Gans  <guru.mail@muenster.de>
	* Move fonts into the root directory 

2017-10-30  Markus Gans  <guru.mail@muenster.de>
	* Fix scrollview functionality with new inheritance structure
	* Add a standardized close confirmation dialog
	* Only <final/final.h> can now be directly integrated in programs

2017-10-29  Markus Gans  <guru.mail@muenster.de>
	* Adaptation of the inheritance diagrams in the header files
	* Add a standardized cb_exitApp callback method to FApplication

2017-10-27  Markus Gans  <guru.mail@muenster.de>
	* FWidget now inherits directly from FObject 
